--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   permission: ^0.1.7
   geocoder: ^0.2.1
   geolocator: ^6.1.1
-
+  stomp_dart_client: ^0.3.8
   datetime_picker_formfield: ^1.0.0
 
 
